--- a/book.html
+++ b/book.html
@@ -43,13 +43,13 @@
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
                   <div class="list-item">
-                    <div class="list-row s-font">導演<div><span>麥可貝</span></div>
+                    <div class="list-row">導演<div><span>麥可貝</span></div>
                     </div>
-                    <div class="list-row s-font">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
                     </div>
-                    <div class="list-row s-font">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
+                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
                     </div>
-                    <div class="list-row s-font">片長<div><span>136分鐘</span></div>
+                    <div class="list-row">片長<div><span>136分鐘</span></div>
                     </div>
                   </div>
                 </div>
@@ -70,22 +70,14 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <a class="time disable" href="">09:00</a>
-                  <a class="time active" href="book-step1.html">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-
+                  <div class="time disable"><a class="" href="">09:00</a></div>
+                  <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
                 </div>
               </div>
             </div>
@@ -102,13 +94,13 @@
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
                   <div class="list-item">
-                    <div class="list-row s-font">導演<div><span>麥可貝</span></div>
+                    <div class="list-row">導演<div><span>麥可貝</span></div>
                     </div>
-                    <div class="list-row s-font">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
                     </div>
-                    <div class="list-row s-font">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
+                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
                     </div>
-                    <div class="list-row s-font">片長<div><span>136分鐘</span></div>
+                    <div class="list-row">片長<div><span>136分鐘</span></div>
                     </div>
                   </div>
                 </div>
@@ -129,18 +121,14 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <a class="time disable" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time active" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
+                <div class="time disable"><a class="" href="">09:00</a></div>
+                <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time"><a class="" href="">09:00</a></div>
                 </div>
               </div>
             </div>
@@ -159,13 +147,13 @@
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
                   <div class="list-item">
-                    <div class="list-row s-font">導演<div><span>麥可貝</span></div>
+                    <div class="list-row">導演<div><span>麥可貝</span></div>
                     </div>
-                    <div class="list-row s-font">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
                     </div>
-                    <div class="list-row s-font">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
+                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
                     </div>
-                    <div class="list-row s-font">片長<div><span>136分鐘</span></div>
+                    <div class="list-row">片長<div><span>136分鐘</span></div>
                     </div>
                   </div>
                 </div>
@@ -186,18 +174,14 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <a class="time disable" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time active" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
-                  <a class="time" href="">09:00</a>
+                  <div class="time disable"><a class="" href="">09:00</a></div>
+                  <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time"><a class="" href="">09:00</a></div>
                 </div>
               </div>
             </div>
