訂票流程頁面 編輯

--- a/book-step2.html
+++ b/book-step2.html
@@ -76,13 +76,37 @@
       </div>
     </section>
     <section class="section">
-      <div class="content">
+      <div class="content book-tickets-2">
         <div class="main-title l-font">
           <div class="s-font">SELECT SEATS</div>
           <div>請選擇座位</div>
         </div>
+        <div class="condition">
+          <div class="countdown">
+            <span class="material-icons">
+              hourglass_empty
+            </span>
+            TIME LEFT<span class="l-font">10:00</span>
+          </div>
+          <div class="how-many-seat">
+            <span class="material-icons">
+              task_alt
+            </span>
+            待選座位數<span class="l-font">3</span>位
+          </div>
+        </div>
         <div class="seat-table">
-          <div class="screen">screen</div>
+          <div class="seat-mark">
+            <div class="mark selectable"><span>01</span>可選座位</div>
+            <div class="mark selected"><span>01</span>已選座位</div>
+            <div class="mark sell"><span>01</span>已售出</div>
+            <div class="mark wheelchair"><span class="material-icons">
+              accessible
+            </span>輪椅位</div>
+          </div>
+          <div class="screen">
+            <img src="image/svg/screen.svg" alt="screen-icon">
+          </div>
           <div class="table">
             <div class="table-tr">
               <div class="table-td">
@@ -728,7 +752,7 @@
                 </div>
               </div>
             </div>
-          </div>        
+          </div>  
         </div>
         <div class="actionbtn book-step-btn">
           <button type="button" class="back"><span class="material-icons">
