--- a/movie-info.html
+++ b/movie-info.html
@@ -29,7 +29,7 @@
             <span class="s-font ellipsis">AMBULANCE</span>
           </div>
           <div class="up-date s-font">上映日期 2022-03-25</div>
-          <button class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</button>
+          <button class="book-btn"><a href="book-step1.html"><span class="material-icons"> featured_play_list </span>前往訂票</a></button>
           <div class="list-item">
             <div class="list-row">導演<span>麥可貝</span></div>
             <div class="list-row">演員<div><span class="">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
