--- a/book-step1.html
+++ b/book-step1.html
@@ -168,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="row-right row-4">
+          <div class="row-right attention row-4">
             <span class="material-icons">
               info_outline
             </span>
@@ -204,11 +204,11 @@
               </li>
             </ul>
           </div>
-          <div class="actionbtn book-step-btn">
-            <button type="button" class="back"><span class="material-icons">
+          <div class="actions">
+            <button type="button" class="back actions-btn"><span class="material-icons">
                 west
               </span>BACK</button>
-            <button type="button" class="next">NEXT<span class="material-icons">
+            <button type="button" class="next actions-btn">NEXT<span class="material-icons">
                 east
               </span></button>
           </div>
