--- a/book-step2.html
+++ b/book-step2.html
@@ -754,11 +754,11 @@
             </div>
           </div>  
         </div>
-        <div class="actionbtn book-step-btn">
-          <button type="button" class="back"><span class="material-icons">
+        <div class="actions">
+          <button type="button" class="back actions-btn"><span class="material-icons">
               west
             </span>BACK</button>
-          <button type="button" class="next">NEXT<span class="material-icons">
+          <button type="button" class="next actions-btn">NEXT<span class="material-icons">
               east
             </span></button>
         </div>
