--- a/book-step3.html
+++ b/book-step3.html
@@ -115,12 +115,12 @@
             <span class="checkmark"></span>
           </label>
         </div>
- 
-        <div class="actionbtn book-step-btn">
-          <button type="button" class="back"><span class="material-icons">
+
+        <div class="actions">
+          <button type="button" class="back actions-btn"><span class="material-icons">
               west
             </span>BACK</button>
-          <button type="button" class="next">CHECKOUT<span class="material-icons">
+          <button type="button" class="next actions-btn">CHECKOUT<span class="material-icons">
             attach_money
           </span></button>
         </div>
