--- a/book-step4.html
+++ b/book-step4.html
@@ -49,7 +49,8 @@
               <div class="row-5 detail"><span class="material-icons">videocam</span><span
                   class="start-time">21:30</span>標準數位 | 12聽</div>
               <div class="row-5 detail mb-0"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
-              <div class="row-5 detail mb-0 s-font"><span class="material-icons">chair</span>12-07,12-08,12-09,12-11,12-12</div>
+              <div class="row-5 detail mb-0 s-font"><span
+                  class="material-icons">chair</span>12-07,12-08,12-09,12-11,12-12</div>
             </div>
           </div>
           <div class="row-right row-3 ">
@@ -77,23 +78,26 @@
     </section>
     <section class="section">
       <div class="content book-tickets-4">
-        <div class="main-title l-font">
-          <div class="s-font">CHECK INFORMATION</div>
-          <div>請確認購票人資訊</div>
+        <div class="book-done l-font">
+          <div class="done"><span class="material-icons"> featured_play_list </span>您已完成訂單</div>
+          <div>取票序號 #126677888</div>
         </div>
         <div class="attention">
-          <div class="note"><span class="material-icons">info</span>訂票及取票注意事項</div>
+          <div class="note"><span class="material-icons">info</span>注意事項</div>
           <ul class="s-font">
             <li>訂票張數限制</li>
             <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
+            <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
+            <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
           </ul>
         </div>
-        <div class="actionbtn book-step-btn">
-          <button type="button" class="next">HOME<span class="material-icons">
+        <div class="actions">
+          <button class="actions-btn next">HOME<span class="material-icons">
             forward
-          </span></button>
+          </span>
+        </button>
         </div>
-       
+
       </div>
     </section>
   </main>
