--- a/group-ticket.html
+++ b/group-ticket.html
@@ -18,23 +18,53 @@
   <!-- main container -->
   <main class="section-box">
     <section class="section">
-      <div class="content news">
+      <div class="content group-ticket">
         <div class="main-title l-font">
           <div class="s-font">GROUP TICKET</div>
           <div>業務專區</div>
         </div>
-        <div class="content-row">
-          <div class="event row-3-1">
-            <a href="news-info.html ">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+        <div class="content-row project">
+          <div class="row-5 row-left">
+            <img src="https://fakeimg.pl/450x250/" alt="event-name" />
+          </div>
+          <div class="row-5 row-right">
             <div>
               <p class="sub-title">
                 看指定電影送限定海報
               </p>
-              <hr class="hr-line"/>
-              <p>2022.08.13</p>
+              <hr class="hr-line" />
+              <div class="new-content">
+                <p>Lorem ipsum dolor sit amet consectes, illo nihil provident molestias ducimus voluptate veritatis? Nemo
+                  sapiente obcaecati magni corrupti. Et, eos. Veritatis neque accusantium nam numquam temporibus quis nobis,
+                  sunt consequatur eos nemo, saepe ratione aspernatur tempore nulla natus iusto omnis debitis. Quia voluptatibus
+                  excepturi fuga. Ab distinctio obcaecati dicta cupiditate quisquam tempore laboriosam sapiente praesentium,
+                  iure facilis veritatis odio, in sunt commodi nam optio, aut nihil numquam ex soluta excepturi aliquam cumque!
+                  Ea officia amet dolorum assumenda asperiores?</p>
+                
+              </div>
             </div>
-            </a>
+          </div>
+        </div>
+        <div class="content-row project">
+          <div class="row-5 row-left">
+            <img src="https://fakeimg.pl/450x250/" alt="event-name" />
+          </div>
+          <div class="row-5 row-right">
+            <div>
+              <p class="sub-title">
+                看指定電影送限定海報
+              </p>
+              <hr class="hr-line" />
+              <div class="new-content">
+                <p>Lorem ipsum dolor sit amet consectes, illo nihil provident molestias ducimus voluptate veritatis? Nemo
+                  sapiente obcaecati magni corrupti. Et, eos. Veritatis neque accusantium nam numquam temporibus quis nobis,
+                  sunt consequatur eos nemo, saepe ratione aspernatur tempore nulla natus iusto omnis debitis. Quia voluptatibus
+                  excepturi fuga. Ab distinctio obcaecati dicta cupiditate quisquam tempore laboriosam sapiente praesentium,
+                  iure facilis veritatis odio, in sunt commodi nam optio, aut nihil numquam ex soluta excepturi aliquam cumque!
+                  Ea officia amet dolorum assumenda asperiores?</p>
+        
+              </div>
+            </div>
           </div>
         </div>
         </div>
