調整手機板排版

--- a/book-step1.html
+++ b/book-step1.html
@@ -86,7 +86,7 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th sale"><span class="material-icons"> featured_play_list </span>優惠套票</div>
+                  <div class="table-th sale"><span class="material-icons"> featured_play_list </span>優惠套票<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -101,7 +101,7 @@
                     <div class="table-td">NT$777</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number">
+                      <input type="number" min="0">
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$7777</div>
@@ -112,7 +112,7 @@
                     <div class="table-td">NT$333</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number">
+                      <input type="number" min="0">
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
@@ -123,7 +123,7 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th"><span class="material-icons"> featured_play_list </span>一般票種</div>
+                  <div class="table-th"><span class="material-icons"> featured_play_list </span>一般票種<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -137,7 +137,7 @@
                     <div class="table-td">NT$300</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number">
+                      <input type="number" min="0">
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3000</div>
@@ -148,7 +148,7 @@
                     <div class="table-td">NT$270</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number">
+                      <input type="number" min="0">
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
@@ -159,7 +159,7 @@
                     <div class="table-td">NT$160</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number">
+                      <input type="number" min="0">
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
