--- a/book-step3.html
+++ b/book-step3.html
@@ -89,11 +89,11 @@
           </div>
           <div class="info-item">
             <label>手機號碼</label>
-            <input type="text" value="09123456789">
+            <input type="tel" value="09123456789">
           </div>
           <div class="info-item">
             <label>電子信箱</label>
-            <input type="text" value="aaadddccc@gmail.com">
+            <input type="email" value="aaadddccc@gmail.com">
           </div>
           <label for="">請選擇電子發票開立方式：</label>
           <div class="precautions s-font"><span class="material-icons"> info_outline </span>電影票票價內含娛樂稅，不另開統一發票。訂單含餐點之套餐，餐點部分統一發票將由影城於取票時一併交付；平台手續費將另行開立電子發票。</div>
