--- a/header.html
+++ b/header.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="css/global.min.css" />
+<link rel="stylesheet" href="css/swiper-bundle.min.css" />
+<link rel="stylesheet" href="css/all.min.css" />
 <header>
   <nav id="nav">
     <input type="checkbox" id="toggle" class="input-toggler" />
@@ -8,40 +11,63 @@
       <span class="menu-toggler-line"></span>
     </label>
     <div class="sidebar">
+      <!-- navbar logo -->
       <a class="nav-brand" href="index.html">
         <h1>LOGO</h1>
       </a>
-      <!-- navbar for pc  -->
-      <div class="forpc">
+      <!-- navbar menu  -->
+      <div class="nav-menu">
         <ul class="menu">
+          <!-- account for mobile -->
+          <!-- class 'isUser' trigger login/out layout -->
+          <div class="user-account-mobile">
+          <div class="user">
+            HELLO! <span class="user-name">Yick</span>
+          </div>
+          <div class="account-sub">
+            <hr />
+            <a href="book-history.html" title="訂票查詢與取消">訂票查詢與取消</a>
+            <a href="account.html" title="會員資料">會員資料</a>
+            <a href="" title="會員優惠PLUS">會員優惠PLUS</a>
+          </div>
+          <div class="user-login">
+            <a href=
+            "#login" title="會員登入">會員登入</a>
+          </div>
+          <div class="user-regist">
+            <a href="#regist" title="加入會員">加入會員</a>
+          </div>
+        </div>
+        <!-- account for mobile -->
           <li>
-            <a class="menu-link" href="#" title="線上訂票">線上訂票</a>
+            <a class="menu-link" href="book.html" title="線上訂票">線上訂票</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#" title="公館場次查詢">公館場次查詢</a></li>
               <li><a class="dropdown-item" href="#" title="新竹場次查詢">新竹場次查詢</a></li>
             </ul>
           </li>
           <li>
-            <a class="menu-link" href="#" title="電影介紹">電影介紹</a>
+            <a class="menu-link" href="movies.html" title="電影介紹">電影介紹</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#" title="現正熱映">現正熱映</a></li>
               <li><a class="dropdown-item" href="#" title="即將上映">即將上映</a></li>
             </ul>
           </li>
           <li><a class="menu-link" href="news.html" title="最新消息">最新消息</a></li>
-          <li><a class="menu-link" href="#" title="業務專區">業務專區</a></li>
-          <li><a class="menu-link" href="#" title="關於影城">關於影城</a></li>
+          <li><a class="menu-link" href="group-ticket.html" title="業務專區">業務專區</a></li>
+          <li><a class="menu-link" href="about.html" title="關於影城">關於影城</a></li>
         </ul>
-        <!-- login/logout style user-account toggle class 'isUser'/none   -->
-        <div class="user-account">
+        <!-- account for pc -->
+        <!-- class 'isUser' trigger login/out layout -->
+        <div class="user-account isUser">
           <div class="user">
             HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
               class="material-icons"> menu </span>
           </div>
           <div class="account-sub">
             <hr />
-            <a href="" title="訂票查詢與取消">訂票查詢與取消</a>
-            <a href="" title="會員資料">會員資料</a>
+            <a href="book-history.html" title="訂票查詢與取消">訂票查詢與取消</a>
+            <a href="account.html" title="會員資料">會員資料</a>
             <a href="" title="會員優惠PLUS">會員優惠PLUS</a>
           </div>
           <div class="user-login">
@@ -50,7 +76,6 @@
           <div class="user-regist">
             <a href="#regist" title="加入會員">加入會員</a>
           </div>
-
         </div>
       </div>
     </div>
@@ -58,24 +83,24 @@
   <!-- 登入modal -->
   <div class="modal" id="login">
     <div class="modal-content">
-      <p>WELCOME TO BROADWAY!</p>
+      <h2>WELCOME TO BROADWAY!</h2>
       <div class="modal-info">
         <form action="">
-          <div class="info">
+          <div class="row">
             <label for="loginid">帳號（電子郵件信箱）</label>
-            <input type="text" id="loginid" placeholder="aaabbb@gmail.com">
+            <input type="email" id="loginid" placeholder="aaabbb@gmail.com">
           </div>
-          <div class="info">
+          <div class="row">
             <label for="loginpassword">登入密碼 <a href="" class="forgetpwd">
                 <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
-            <input type="password" id="loginpassword" placeholder="PASSWORD">
+            <input type="text" id="loginpassword" placeholder="PASSWORD">
             <label for="lockpwd" class="xs-font container-checkbox lockpwd">
               記住密碼
               <input type="checkbox" name="lockpwd" id="lockpwd">
               <span class="checkmark"></span>
             </label>
           </div>
-          <div class="info safeverify">
+          <div class="row safeverify">
             <label for="">安全驗證</label>
             <div>
               <input type="text" placeholder=" 請輸入右方驗證碼">
@@ -85,8 +110,8 @@
               </div>
             </div>
           </div>
-          <div class="info actionbtn">
-            <button>LOGIN</button>
+          <div class="row actionbtn">
+            <button type="submit">LOGIN</button>
             <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
           </div>
         </form>
@@ -97,36 +122,36 @@
   <!-- 註冊modal -->
   <div class="modal" id="regist">
     <div class="modal-content">
-      <p>WELCOME TO BROADWAY!JOIN US!</p>
+      <h2>WELCOME TO BROADWAY!JOIN US!</h2>
       <div class="modal-info">
         <form action="">
-          <div class="info">
+          <div class="row">
             <label for="registid">帳號（電子郵件信箱)<span class="required-icon">*</span></label>
-            <input type="text" id="registid" required="required" placeholder="aaabbb@gmail.com">
+            <input type="email" id="registid" required="required" placeholder="aaabbb@gmail.com">
           </div>
-          <div class="info">
+          <div class="row">
             <label for="phone">聯絡電話<span class="required-icon">*<span
                   class="xs-font">將以此帳號作為日後訂單聯繫，請務必填寫正確</span></span></label>
-            <input type="number" id="phone" required="required" placeholder="091234567">
+            <input type="tel" id="phone" required="required" placeholder="091234567">
           </div>
-          <div class="info">
+          <div class="row">
             <label for="setpwd">設定密碼<span class="required-icon">*</span></label>
-            <input type="password" id="passetpwdsword" required="required" placeholder="請輸入6-10位含大小寫英數字">
+            <input type="text" id="setpwd" required="required" placeholder="請輸入6-10位含大小寫英數字">
           </div>
-          <div class="info">
+          <div class="row">
             <label for="confirmpwd">確認密碼<span class="required-icon">*</span></label>
-            <input type="password" id="confirmpwd" required="required" placeholder="請再次確認密碼">
+            <input type="text" id="confirmpwd" required="required" placeholder="請再次確認密碼">
           </div>
-          <div class="info">
+          <div class="row">
             <label for="confirmrule" class="xs-font container-checkbox">
               我同意 會員條款｜應用程式使用條款｜個人資料使用條款
               <input type="checkbox" id="confirmrule" required="required">
               <span class="checkmark"></span>
             </label>
           </div>
-          <div class="info actionbtn">
-            <button>REGISTER</button>
-            <a href="#login" class="xs-font">已有帳號！馬上登入</a>
+          <div class="row actionbtn">
+            <button type="submit">REGISTER</button>
+            <a href="#login" class="xs-font">已有帳號！馬上登入!</a>
           </div>
         </form>
       </div>
