調整NAV 調整頁面及樣式

--- a/about.html
+++ b/about.html
@@ -3,15 +3,39 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>BROADWAY CINEMAS - 百老匯影城</title>
+  <title>BROADWAY CINEMAS - 百老匯影城 - 關於影城</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <meta name="author" content="	Broadway百老匯影城">
+  <meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
+  <meta name="distribution" content="Taiwan">
+  <meta name="rating" content="General">
+  <meta name="keywords" content="電影,百老匯影城,影城">
+  <meta name="description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="url" content="">
+  <link rel="canonical" href="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="image/favicon.png">
+  <meta property="og:image:width" content="1000">
+  <meta property="og:image:height" content="523">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Broadway百老匯影城">
+  <meta property="og:title" content="Broadway百老匯影城">
+  <meta property="og:description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
+  <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" href="css/page.min.css" />
 </head>
 
-<body   id="app">
+<body id="app">
   <!-- header -->
   <nav-header></nav-header>
 
@@ -28,7 +52,6 @@
           <button class="actions-btn tab-item" id="tab2">新竹百老匯影城</button>
         </div>
         <div class="tab-container">
-          <div class="tab-content" data-id="tab1">
           <div class="content-row">
             <div class="row-5">
               <img src="https://fakeimg.pl/450x250/" alt="" />
@@ -37,21 +60,99 @@
               <img src="https://fakeimg.pl/450x250/" alt="" />
             </div>
           </div>
+          <div class="info">
+            <div class="main-title l-font">
+              <div>影城特色</div>
+            </div>
+            <div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, rerum. Non voluptas voluptatum, sapiente
+              labore numquam obcaecati nulla pariatur. Hic doloribus quos quaerat aspernatur optio dicta, delectus rerum
+              provident iste assumenda eum quis fugit? Veniam reiciendis quam ex incidunt laborum, omnis totam placeat
+              est velit soluta rerum ab officiis nesciunt sed harum? Iusto, vitae aliquam. Exercitationem, est molestiae
+              repellendus modi sunt aut tempora natus minima sint eligendi accusamus quos voluptatibus sed labore minus
+              enim, non unde dolores in atque maiores numquam! Esse, velit magnam? Dignissimos, impedit aut ad aperiam
+              laudantium magni doloremque repudiandae in molestiae dolores, reprehenderit veritatis necessitatibus
+              error.
+              <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, aut.</li>
+              <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, aut.</li>
+              <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, aut.</li>
+            </div>
           </div>
-          <div class="tab-content hide" data-id="tab2">
-            <div class="">
-              
+          <div class="info">
+            <div class="main-title l-font">
+              <div>影廳座位及無障礙設施數量</div>
+            </div>
+            <div class="table">
+              <div class="table-tr">
+                <div class="table-th">電影影廳</div>
+                <div class="table-th">第1廳</div>
+                <div class="table-th">第2聽</div>
+                <div class="table-th">第3廳</div>
+                <div class="table-th">第4聽</div>
+                <div class="table-th">第5廳</div>
+                <div class="table-th">第6聽</div>
+                <div class="table-th">第7廳</div>
+                <div class="table-th">第8聽</div>
+                <div class="table-th">第9廳</div>
+                <div class="table-th">第10聽</div>
+                <div class="table-th">第11廳</div>
+                <div class="table-th">第12聽</div>
+              </div>
+              <div class="table-tr">
+                <div class="table-td">座位排數</div>
+                <div class="table-td">10</div>
+                <div class="table-td">1</div>
+                <div class="table-td">12</div>
+                <div class="table-td">9</div>
+                <div class="table-td">8</div>
+                <div class="table-td">10</div>
+                <div class="table-td">12</div>
+                <div class="table-td">11</div>
+                <div class="table-td">9</div>
+                <div class="table-td">11</div>
+                <div class="table-td">12</div>
+                <div class="table-td">12</div>
+              </div>
+              <div class="table-tr">
+                <div class="table-td">座位總數</div>
+                <div class="table-td">50</div>
+                <div class="table-td">35</div>
+                <div class="table-td">60</div>
+                <div class="table-td">35</div>
+                <div class="table-td">35</div>
+                <div class="table-td">60</div>
+                <div class="table-td">104</div>
+                <div class="table-td">72</div>
+                <div class="table-td">81</div>
+                <div class="table-td">100</div>
+                <div class="table-td">120</div>
+                <div class="table-td">144</div>
+              </div>
+              <div class="table-tr">
+                <div class="table-td">愛心位數</div>
+                <div class="table-td">1</div>
+                <div class="table-td">2</div>
+                <div class="table-td">1</div>
+                <div class="table-td">1</div>
+                <div class="table-td">1</div>
+                <div class="table-td">2</div>
+                <div class="table-td">3</div>
+                <div class="table-td">2</div>
+                <div class="table-td">1</div>
+                <div class="table-td">1</div>
+                <div class="table-td">1</div>
+                <div class="table-td">2</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-   
   </main>
   <!-- main container -->
 
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
-  
+
   <!-- footer -->
   <bottom-footer></bottom-footer>
 
