--- a/account.html
+++ b/account.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/global.min.css" />
-  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="css/page.min.css" />
 
 </head>
 
