--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="css/global.min.css" />
 <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-<link rel="stylesheet" href="css/all.min.css" />
+<link rel="stylesheet" href="css/page.min.css" />
 <header>
   <nav id="nav">
-    <input type="checkbox" id="toggle" class="input-toggler" />
+    <input type="checkbox" id="hamberger-menu" class="input-toggler" />
     <div class="sidebar-overlay"></div>
-    <label for="toggle" class="menu-toggler">
+    <label for="hamberger-menu" class="menu-toggler">
       <span class="menu-toggler-line"></span>
       <span class="menu-toggler-line"></span>
       <span class="menu-toggler-line"></span>
@@ -18,27 +18,6 @@
       <!-- navbar menu  -->
       <div class="nav-menu">
         <ul class="menu">
-          <!-- account for mobile -->
-          <!-- class 'isUser' trigger login/out layout -->
-          <div class="user-account-mobile">
-          <div class="user">
-            HELLO! <span class="user-name">Yick</span>
-          </div>
-          <div class="account-sub">
-            <hr />
-            <a href="book-history.html" title="訂票查詢與取消">訂票查詢與取消</a>
-            <a href="account.html" title="會員資料">會員資料</a>
-            <a href="" title="會員優惠PLUS">會員優惠PLUS</a>
-          </div>
-          <div class="user-login">
-            <a href=
-            "#login" title="會員登入">會員登入</a>
-          </div>
-          <div class="user-regist">
-            <a href="#regist" title="加入會員">加入會員</a>
-          </div>
-        </div>
-        <!-- account for mobile -->
           <li>
             <a class="menu-link" href="book.html" title="線上訂票">線上訂票</a>
             <ul class="dropdown-menu">
@@ -57,9 +36,8 @@
           <li><a class="menu-link" href="group-ticket.html" title="業務專區">業務專區</a></li>
           <li><a class="menu-link" href="about.html" title="關於影城">關於影城</a></li>
         </ul>
-        <!-- account for pc -->
         <!-- class 'isUser' trigger login/out layout -->
-        <div class="user-account isUser">
+        <div class="user-account">
           <div class="user">
             HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
               class="material-icons"> menu </span>
