--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="css/page.min.css" />
   <style>
     .block-effect {
   font-size: calc(8px + 6vw);
